<resources>
    <string name="app_name">SmartXport</string>
    <string name="title_activity__login">Activity_Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_location_map">Map</string>

    <string name="api_key" translatable="false">AIzaSyCqAAtzg6GUFsjDVbZBpaqaKBRFIChb4x8</string>
    <string name="title_activity_maps">Map</string>

    <string name="app_title">SmartXport Admin</string>
    <string name="slogan_name">We will help you to Track yout loved ones!</string>

    <!--    main menu-->
    <string name="str_nav_login">Login</string>
    <string name="str_nav_signup">Sign Up</string>
    <string name="str_nav_faq">FAQs</string>
    <string name="str_nav_language">Language</string>
    <string name="str_nav_contactus">Contact us</string>
    <string name="str_nav_share">Share</string>
    <string name="str_nav_rateus">Rate us</string>

    <string name="email_address">Email Address</string>
    <string name="info_smartxport_com">smartxport67@gmail.com</string>
    <string name="freq_asked_question">Frequently Asked Questions</string>
</resources>